--- a/css/estilos.css
+++ b/css/estilos.css
@@ -82,19 +82,19 @@ nav {
   width: 100%;
 }
 
-.introducao {
+.sobre {
   text-align: center;
   padding: 4rem 0;
   color: white;
 }
 
-.introducao h1 {
+.sobre h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
   animation: fadeInUp 1s ease;
 }
 
-.introducao p {
+.sobre p {
   font-size: 1.2rem;
   margin-bottom: 2rem;
   animation: fadeInUp 1s ease 0.2s both;
@@ -250,14 +250,6 @@ nav {
   text-align: center;
   margin-bottom: 2rem;
   color: #666;
-}
-
-.sobre-intro {
-  text-align: justify;
-  font-size: 1.1rem;
-  line-height: 1.8;
-  max-width: 800px;
-  margin: 0 auto;
 }
 
 .form-group {
